<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/splash_screen">
    
    <ImageView
            android:id="@+id/emotioHappy"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/ic_happy" tools:layout_editor_absoluteY="94dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.529"/>
    
    <ImageView
            android:id="@+id/emotionSad"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/ic_sad_1"
            tools:layout_editor_absoluteY="69dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.769"/>
    
    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:textAlignment="center"
              android:text="@string/main_explain"
              android:textColor="@android:color/white"
              android:textSize="20sp"
              app:layout_constraintEnd_toEndOf="parent"
              android:layout_marginEnd="8dp"
              app:layout_constraintStart_toStartOf="parent"
              android:layout_marginStart="8dp"
              app:layout_constraintTop_toTopOf="parent"
              android:layout_marginBottom="8dp"
              app:layout_constraintBottom_toBottomOf="parent"
              app:layout_constraintVertical_bias="0.339"
              app:layout_constraintHorizontal_bias="0.0" android:id="@+id/textView"/>
    
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:id="@+id/textInputUserName"
            android:textColorHint="@android:color/white"
            android:layout_margin="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent">
    
        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textEditUserName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/main_find_by_user_name"
                android:textColor="@android:color/white"
                />
    
    </com.google.android.material.textfield.TextInputLayout>
    
    <Button
            android:id="@+id/buttonSearch"
            android:layout_width="match_parent"
            android:text="@string/main_search"
            android:background="@color/searchColor"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="10dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textInputUserName"/>

    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:textAlignment="center"
              android:text="@string/main_own_tweets"
              app:layout_constraintStart_toStartOf="parent"
              android:layout_marginStart="8dp"
              app:layout_constraintEnd_toEndOf="parent"
              android:layout_marginEnd="8dp"
              android:textColor="@android:color/white"
              android:textSize="20sp"
              android:id="@+id/textView2"
              android:layout_marginTop="32dp"
              app:layout_constraintTop_toBottomOf="@+id/buttonSearch"/>

    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="You must have the Twitter app installed"
              android:textStyle="italic"
              android:textColor="@android:color/white"
              android:textSize="10sp"
              android:textAlignment="center" app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintHorizontal_bias="1.0"
              android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView2"
              android:id="@+id/textView3"/>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:layout_margin="8dp"
            android:id="@+id/relativeLayout"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="1.0" android:layout_marginTop="115dp"
            app:layout_constraintTop_toBottomOf="@+id/textView3">

        <com.twitter.sdk.android.core.identity.TwitterLoginButton
                android:id="@+id/buttonTwitterLogin"
                android:layout_width="match_parent"
                android:layout_margin="8dp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
        />

        <Button
                android:id="@+id/buttonTwitterOpen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_see_my_tweets"
                android:background="@color/twitterColor"
                android:padding="5dp"
                android:textColor="@android:color/white"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="16dp" android:layout_alignParentStart="true"
                android:layout_marginStart="76dp" android:layout_alignParentEnd="true"
                android:layout_marginEnd="209dp"
                android:visibility="gone"/>
        <Button
                android:id="@+id/buttonTwitterSigOut"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_out"
                android:background="@color/twitterColor"
                android:textColor="@android:color/white"
                android:layout_alignParentBottom="true" android:layout_marginBottom="16dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="74dp"
                android:visibility="gone"/>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>